# ProFuzz

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
Source/: PluginEditor.cpp  PluginProcessor.cpp
SourceVox/: VocalDistortionEditor.cpp  VocalDistortionEditor.h  VocalDistortionProcessor.cpp  VocalDistortionProcessor.h
